# sequence-modelling

./: .gitignore  .pre-commit-config.yaml  DiscreteOptim.py  LICENSE  Makefile  README.md  Readme.md  conf.py  emissionplus.py  emmissions.py  genindex.html  hmm.py  hmmviz.py  index.html  index.rst  installation.html  make.bat  objects.inv  py-modindex.html  pyproject.toml  qdhmm_logscaled.py  qdhmmtest.py  readme  search.html  searchindex.js  sequence_modelling.html  utils.py
.devcontainer/: devcontainer.json  devcontainer_setup.sh
.github/workflows/: app-test.yml  build-publish.yml  docs-pages.yaml  docs_pages.yaml  integration.yaml  poetry-app-test.yml  python-app.yml
_sources/: index.rst.txt  sequence_modelling.rst.txt
docs/: Readme.md  conf.py  index.rst  installation.rst
experiments/: 1Household.csv  Libepowerdata_0.p  dataTypeA.csv  discrete_discasino.csv  exp_dauphine.py  exp_dauphine_plus.py  exp_lemonde.py  exp_lemonde_plus.py  exp_libe_plus.py  exp_multinomial.py  finalpipeline.py  hmm_windspeed.py  hmmtest.py  lemonde230708h19h.csv  libe16099h17h.csv  qdhmmtest.py  single_w.xlsx  view_jobacc.py  windspeed.csv  winterHMM.py  winter_script_typeA.py  winter_script_typeB.py
experiments/profile_HMMhouse type/: HMM_profiles_output_typeA.csv  HMM_profiles_output_typeC.csv  HMM_profiles_output_typeD.csv
nbuild/: code.rst  data.rst  index.rst  intro.rst
nbuild/doctrees/: code.doctree  data.doctree  environment.pickle  howto.doctree  index.doctree  intro.doctree  project.doctree
nbuild/html/: .buildinfo  code.html  data.html  genindex.html  howto.html  index.html  intro.html  np-modindex.html  objects.inv  project.html  py-modindex.html  search.html  searchindex.js
src/sequence_modelling/: DiscreteOptim.py  conf.py  emissionplus.py  emmissions.py  hmm.py  hmmviz.py  qdhmm.py  qdhmm_logscaled.py  utils.py
unittests/: test_unittests.py.bak
(+41 files in other folders)
