[tool.poetry]
name = "sequence_modelling"
version = "0.1.0"
description = ""
authors = ["Nitin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.*"
numpy = "^1.24.2"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
matplotlib = "^3.7.0"
2to3 = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
