[tool.poetry]
name = "sequence_modelling"
version = "0.1.0"
description = ""
authors = ["Nitin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.*"
numpy = "^1.24.2"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.0"
2to3 = "^1.0"
pep8 = "^1.7.1"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
mypy = "^0.910"
seaborn = "^0.11.2"
pep8-naming = "^0.12.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
