[tool.poetry]
name = "sequence_modelling"
version = "0.1.5"
description = "sequence modelling using HMMs"
authors = ["Nitin Bhushan <bhushan.nitin@posteo.net>"]
readme = "README.md"
license = "BSD-2-Clause"


[tool.poetry.dependencies]
python = "3.9.*"
numpy = "^1.24.2"
scipy = "^1.10.1"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.0"
2to3 = "^1.0"
pep8 = "^1.7.1"
mypy = "^0.910"
seaborn = "^0.11.2"
pep8-naming = "^0.12.1"
pytest = "^7.2.1"
unittest2 = "^1.1.0"
pre-commit = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]
